# aisave

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml
aisave/: __init__.py  classic_analysis.py  crypto.py  cve.py  gui.py  openaichat.py
aisave.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: ron.enc  settings.json
